Use Java 25 by default (#7076)
As part of the Mill 1.1.0 minor version bump we increased the default
JVM version from 17 to 21, as the current LTS JVM version . As we
prepare for Mill 1.2.0, this PR bumps it to 25 which is latest LTS JVM
version